--- a/health-care/package.json
+++ b/health-care/package.json
@@ -17,11 +17,12 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-multi-carousel": "^2.8.2",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "redux-thunk": "^2.4.2",
