--- a/health-care/package.json
+++ b/health-care/package.json
@@ -8,9 +8,11 @@
     "@chakra-ui/react": "^2.5.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@iconify/icons-bi": "^1.2.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "firebase": "^9.19.1",
     "framer-motion": "^10.9.2",
