--- a/health-care/package.json
+++ b/health-care/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/layout": "^2.1.17",
     "@chakra-ui/react": "^2.6.1",
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@iconify/icons-bi": "^1.2.16",
@@ -14,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
+    "email-validator": "^2.0.4",
+    "emailjs": "^4.0.1",
     "firebase": "^9.19.1",
     "framer-motion": "^10.12.10",
     "json-server": "^0.17.3",
